--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"@reduxjs/toolkit": "^2.0.1",
 		"axios": "^1.6.5",
 		"leaflet": "^1.9.4",
+		"lodash": "^4.17.21",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-leaflet": "^4.2.1",
