--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"@ftsinc/leaflet-canvas-marker": "^0.2.40",
 		"@reduxjs/toolkit": "^2.0.1",
 		"axios": "^1.6.5",
 		"leaflet": "^1.9.4",
